--- a/index.html
+++ b/index.html
@@ -1,45 +1,145 @@
 <html>
 		<head>
-				<title>HTML List</title>
+				<title>Assignment-2</title>
 		</head>
 		<body>
-				<h1>HTML List Practice</h1>
-				<p>I learned that HTML lists are used to display informantion in a structured format.There are three main types of list, unordered lists, and definition list.</p>
-				<h1>My favorite Fruits</h1>
-				<ul>
-					<li>Apple</li>
-					<li>Banana</li>
-					<li>Mango</li>
-					<li>Grapes</li>
-					<li>Orange</li>
-				</ul>
-				
-				<h1>Steps to Make a Cup of Tea</h1>
-				<ol>					
-					<li>Boil some water.</li>
-					<li>Add tea leaves or a tea bag.</li>
-					<li>Let it brew for afew minutes.</li>
-					<li>Add milk and sugar(if desired).</li>
-					<li>Stir and serve hot.</li>
-				</ol>
-				<h1>My School Subjects</h1>
+				<h1>HTML List Practice - Using type Attribute</h1>
+				<p>In this practice assignment, I learned how to use different types of ordered 					and unordered lists in HTML. I also explorednested lists and definition lists to 					organize information effectively.</p>
+				<hr>
+				<h1>Ordered Lists with Different Types</h1>
+				<h2>List 1: Numbers(type="1")</h2>
 				<ol>
-					<li>Science</li>
+					<li>Squid Game</li>
+					<li>Alice in Borderland</li>
+					<li>Avengers</li>
+					<li>Titanic</li>
+					<li>Stuart Little</li>
+				</ol>
+				<h2>List 2: Capital Letters (type="A")</h2>
+				<ol type = "A">
+					<li>Squid Game</li>
+					<li>Alice in Borderland</li>
+					<li>Avengers</li>
+					<li>Titanic</li>
+					<li>Stuart Little</li>
+				</ol>
+				<h2>List 2: Roman Numerals (type="I")</h2>
+				<ol type = "I">
+					<li>Squid Game</li>
+					<li>Alice in Borderland</li>
+					<li>Avengers</li>
+					<li>Titanic</li>
+					<li>Stuart Little</li>
+				</ol>
+				<hr>
+				<h1>Unordered Lists with Different Bullets Styles</h1>
+				<h2>List 1: Default (type="disc")</h2>
 				<ul>
-					<li>physics</li>
-					<li>Chemistry</li>
-					<li>Biology</li>
+					<li>Reading</li>
+					<li>Coding</li>
+					<li>Traveling</li>
+					<li>Gaming</li>
+					<li>Music</li>
 				</ul>
-					<li>Mathematics</li>
-				<ul>
-					<li>Algebra</li>
-					<li>geometry</li>
+				<h2>List 1: Circle (type="circle")</h2>
+				<ul type="circle">
+					<li>Reading</li>
+					<li>Coding</li>
+					<li>Traveling</li>
+					<li>Gaming</li>
+					<li>Music</li>
 				</ul>
-					<li>English</li>
-				<ul>
-					<li>Grammar</li>
-					<li>Literature</li>
+				<h2>List 1: Square (type="square")</h2>
+				<ul type = "square">
+					<li>Reading</li>
+					<li>Coding</li>
+					<li>Traveling</li>
+					<li>Gaming</li>
+					<li>Music</li>
 				</ul>
+				<hr>
+				<h1>Definition List Web Technologies</h1>
+				<h2>HTML</h2>
+					<dd>HyperText Markup Language - used to structure web pages.</dd>
+				<h2>CSS</h2>				
+					<dd>Cascading Style Sheets - used to style and format web contect.</dd>
+				<h2>JavaScript</h2>
+					<dd>A scripting language thet adds interactivity to eb pages.</dd>
+				<h2>Frontend</h2>
+					<dd>The part of a website thet users see and interact with directly.</dd>
+				<h2>Backend</h2>
+					<dd>The server-side part that handles data, logic, and communication with databases. </dd>	
+				<hr>
+				<h1>Bonus Challange - My Weekly Routine</h1>
+				<ul type = "bullets">
+					<h3><li>Monday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Study</li>
+					<li>Teaching</li>
+					<li>Work</li>
+				</dd>
+				</ol>
+				<ul type = "bullets">
+					<h3><li>Tuesday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Study</li>
+					<li>Coding Practice</li>
+					<li>Project Work</li>
+				</dd>
+				</ol>
+					<ul type = "bullets">
+					<h3><li>Wednesday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Client Meeting</li>
+					<li>Gym</li>
+					<li>Family Time</li>
+				</dd>
+				</ol>
+					<ul type = "bullets">
+					<h3><li>Thursday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Study</li>
+					<li>Teaching</li>
+					<li>Coding Practice</li>
+				</dd>
+				</ol>
+					<ul type = "bullets">
+					<h3><li>Friday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Study</li>
+					<li>Coding Practice</li>
+					<li>Family Time</li>
+				</dd>
+				</ol>
+					<ul type = "bullets">
+					<h3><li>Saturday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Coding Practice</li>
+					<li>Work</li>
+					<li>Gym</li>
+				</dd>
+				</ol>
+					<ul type = "bullets">
+					<h3><li>Sunday</li></h3>
+				</ul>
+				<ol>
+				<dd>
+					<li>Project Work</li>
+					<li>Play Cricket</li>
+					<li>Watching Movie</li>
+				</dd>
 				</ol>
 		</body>
 </html>
